testsuite/tests/properties/invalid_rebindings/old_env/test.lkt
from common import FooNode

class Example: FooNode {
    fun p(): Int = null[FooNode].old_env
}
